# mlops-practice-3

./: README.md  dvc.yaml  mlflow.db  pyproject.toml  start.py
.dvc/: config
data/raw/: .gitignore
experiments/0/: meta.yaml
mlruns/0/: meta.yaml
mlruns/0/1986cf96ff244ce4b6a5fb9e4801c31c/: meta.yaml
mlruns/0/1986cf96ff244ce4b6a5fb9e4801c31c/metrics/: foo
mlruns/0/a9de77ac22f241498481869790ecf7a4/: meta.yaml
mlruns/0/a9de77ac22f241498481869790ecf7a4/metrics/: foo
mlruns/0/a9de77ac22f241498481869790ecf7a4/tags/: mlflow.source.git.commit  mlflow.source.name
mlruns/0/d9d34e4cf31342c4bffb16a5b1d23cd4/: meta.yaml
mlruns/0/d9d34e4cf31342c4bffb16a5b1d23cd4/artifacts/: feature_importance_gain.json  feature_importance_split.json
mlruns/0/d9d34e4cf31342c4bffb16a5b1d23cd4/artifacts/model/: MLmodel
mlruns/0/d9d34e4cf31342c4bffb16a5b1d23cd4/metrics/: best_iteration  stopped_iteration  valid_0-l1
mlruns/0/d9d34e4cf31342c4bffb16a5b1d23cd4/params/: metric
mlruns/0/d9d34e4cf31342c4bffb16a5b1d23cd4/tags/: mlflow.log-model.history
mlruns/1/: meta.yaml
mlruns/1/09de0ccea7664606922896ba6ec7367f/: meta.yaml
mlruns/1/09de0ccea7664606922896ba6ec7367f/metrics/: mae  rmse
mlruns/1/349da065b3e847aca1c835f16799d440/: meta.yaml
mlruns/artifacts/1/b13e3e78a9c44cc9b685505cb77a6db8/artifacts/models/model.clf/: MLmodel  conda.yaml  requirements.txt
notebooks/: RealEstate.ipynb
src/data/: clean_data.py  select_region.py
src/features/: add_features.py
src/models/: evaluate.py  train.py
